--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ paginate_path: "/page:num/"
 inter_post_navigation: false
 highlightjs_theme: "monokai-sublime"
 
-Archive settings (see https://github.com/jekyll/jekyll-archives/)
+# Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
   enabled:
     - categories
