--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ description: >
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://ivoryRabbit.github.io" # the base hostname & protocol for your site
-cover: "/assets/header_image.jpg"
-logo: "/assets/logo.png"
+cover: "/assets/yeosu.jpg"
+logo: "/assets/bunny.png"
 
 # Build settings
 markdown: kramdown
