--- a/_config.yml
+++ b/_config.yml
@@ -94,8 +94,8 @@ social:
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: ivoryRabbit
+    url: 
     desc: Connect with me on LinkedIn
     share: false
 
