--- a/_config.yml
+++ b/_config.yml
@@ -193,7 +193,7 @@ protocols:
     fb_image_height: 605
     fb_image_type: "image/png"
 
-    twitter_image: "/assets/logo.png"
+    twitter_image: "/assets/bunny.png"
 
     os_repo: "https://github.com/bencentra/centrarium.com"
     os_rcs_type: "git"
