--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@ title: ivoryRabbit's STORY
 subtitle: "기술 개발과 이론 연구"
 email: tsi00008@gmail.com
 name: ivoryRabbit
-description: >
-  Powered by Github & Designed by Centra & Jekyll
+description:
+  - Powered by Github
+  - Designed by Centra with Jekyll
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
