--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: ivoryRabbit's STORY
-subtitle: "기술 개발과 이론 연구"
+subtitle: "에라 "
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
