--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: ivoryRabbit's STORY
-subtitle: "에라 "
+subtitle: "-온라인 일기장-"
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
