--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: ivoryRabbit's STORY
-subtitle: "-의식의 흐름대로 적는다-"
+subtitle: "-의식의 흐름대로-"
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
