--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,15 @@ gems:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
   - jekyll-paginate
+  - jekyll-mermaid
 
 exclude:
   - "/vendor/"
 
+mermaid:
+  src: '/js/mermaid.js'
+  src_config: '/js/mermaid_config.js'
+  
 # Site settings
 title: ivoryRabbit's STORY
 subtitle: "-의식의 흐름대로-"
