--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
 # Site settings
 title: ivoryRabbit's STORY
 title_separator: "'s "
-subtitle: "-의식의 흐름대로-"
+subtitle: "-온라인 -"
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
