--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
 # Site settings
 title: ivoryRabbit's STORY
 title_separator: "'s "
-subtitle: "-전역이 보이지 -"
+subtitle: "-온라인 노트북-"
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
