--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: ivoryRabbit's STORY
-subtitle: "-온라인 노트북-"
+title: 추천을 추천해드립니다
+subtitle: "추천이 마렵다면 얼른 드루와"
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
