--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: 추천을 추천해드립니다
-subtitle: "추천이 마렵다면 얼른 드루와"
+title: 블로그 제목
+subtitle: "블로그 소제목"
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
@@ -59,7 +59,7 @@ social:
     username: Facebook
     url: https://www.facebook.com/
     desc: Friend me on Facebook
-    share: true
+    share: false
 
   - name: GitHub
     icon: github
