--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude:
 
 # Site settings
 title: 추천시스템 논문 리뷰
-subtitle: Technical Writing Blog
+subtitle: Technical Blog
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
