--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
 
 # Site settings
 title: 추천시스템 논문 리뷰
-subtitle: Technical Blog
+subtitle: Research Blog
 email: tsi00008@gmail.com
 name: ivoryRabbit
 description:
